--- a/notbooks/preprocess.ipynb
+++ b/notbooks/preprocess.ipynb
@@ -20,8 +20,8 @@
       },
       "outputs": [],
       "source": [
-        "input_path = \"/content/drive/MyDrive/Compliant/complaints.csv\"\n",
-        "output_path = \"/content/drive/MyDrive/Compliant/filtered_complaints.csv\""
+        "input_path = \"../data/complaints.csv\"\n",
+        "output_path = \"../data/filtered_complaints.csv\""
       ]
     },
     {
