--- a/notbooks/embeding.ipynb
+++ b/notbooks/embeding.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import os\n",
     "import sys\n",
     "# Add parent directory to path for notebook compatibility\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4e1a0112",
    "metadata": {},
    "outputs": [],
