--- a/notbooks/embeding.ipynb
+++ b/notbooks/embeding.ipynb
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4e1a0112",
    "metadata": {},
    "outputs": [],
    "source": [
     "complaint_file_path = '../data/filtered_complaints.csv'\n",
-    "chroma_dir_path = '../chroma/chroma_db'"
+    "chroma_dir_path = '../ModelEmbeding'"
    ]
   },
   {
