--- a/notbooks/app.ipynb
+++ b/notbooks/app.ipynb
@@ -82,7 +82,7 @@
       "source": [
         "\n",
         "# ✅ Initialize the RAG system\n",
-        "rag = RAGPipeline(vectorstore_path=\"/content/drive/MyDrive/Embeding\")\n",
+        "rag = RAGPipeline(vectorstore_path=\"../ModelEmbeding\")\n",
         "\n",
         "# ✅ Chat function with history\n",
         "def chat(query, history):\n",
