--- a/notbooks/app.ipynb
+++ b/notbooks/app.ipynb
@@ -11,9 +11,8 @@
         "import gradio as gr\n",
         "import os\n",
         "import sys\n",
-        "# Add parent directory to path for notebook compatibility\n",
         "notebook_dir = os.getcwd()\n",
-        "parent_dir = os.path.dirname(notebook_dir)\n",
+        "parent_dir = os.path.dirname(src)\n",
         "sys.path.append(parent_dir)"
       ]
     },
